# free_PhD_labor

./: .gitignore  .gitmodules  compare.txt  display_json_file.py  ds_api_test.py  generate_writeup.py  launch_scientist.py  openrouter_test.py  pyproject.toml  run_training_sweep.sh  sae_bench_demo.ipynb  saved  setup.sh  summarize.py  summarize_all.py  training_sweep.py
1/2/: training.py
ai_scientist/: generate_ideas.py  generate_ideas_250220.py  generate_ideas_problem.py  llm.py  perform_experiments.py  perform_writeup.py
custom_saes/: run_all_evals_custom_saes.py
dictionary_learning/: buffer.py  dictionary.py  evaluation.py  training.py
evals/absorption/: main.py
evals/autointerp/: main.py
evals/core/: main.py
evals/mdl/: main.py
evals/scr_and_tpp/: main.py
evals/sparse_probing/: main.py
evals/unlearning/: eval_config.py  main.py
logs/: 20250205_1250_1_orthogonal_continued_r1+sonnet_trial.lg
run_0/: final_info.json
templates/2d_diffusion/: ideas.json
templates/baseline_2/: experiment.py  experiment_jumprelu.py  experiment_standard.py
templates/grokking/: ideas.json
templates/mech_interp/: experiment.py  ideas.json
templates/orthogonal/: experiment.py  experiment_jumprelu.py  experiment_topk.py
templates/orthogonal_backup/: ideas.json
templates/orthogonal_before_0209/: experiment.py  experiment_standard.py  ideas_20250129_170905.json  ideas_20250129_171249.json  ideas_20250129_171911.json  ideas_20250207_203023.json
templates/orthogonal_continued/: experiment.py  ideas_20250129_083407.json
templates/sae_variants/: experiment.py  (+12 more)
(+3456 files in other folders)
