[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project]
name = "AI_mech_interp"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    # Dependencies from both files, duplicates removed, and versions resolved
    "sae_lens>=4.4.2",
    "transformer-lens>=2.0.0",
    "torch>=2.1.2",
    "einops>=0.8.0",
    "numpy>=1.26.4,<2.0",
    "pandas>=2.2.1",  # Higher version from the second file
    "tqdm>=4.66.4",  # Higher version from the first file
    "jaxtyping>=0.2.25",
    "beartype>=0.14.1",
    "scikit-learn>=1.5.2",
    "collectibles>=0.1.5",
    "pydantic>=2.9.2",
    "datasets>=2.18.0",
    "nnsight>=0.2.11",
    "umap-learn>=0.5.6",
    "zstandard>=0.22.0",
    "wandb>=0.17.5",

    # Plotting dependencies (merged)
    "seaborn>=0.13.2",
    "plotly>=5.22.0",  # Higher version from the first file
    "matplotlib>=3.8.4",  # Higher version from the first file

    # Dev / formatting stuff
    "pytest>=8.0.2",
    "nbformat>=5.10.4",
    "ipykernel>=6.29.5",
    "nbstripout>=0.7.1",
    "loguru>=0.7.0",
    "tabulate>=0.9.0",

    # auto-interp
    "openai>=1.0.0",
]
